# semantic-memorization

./: .gitignore  .gitmodules  README.md  __init__.py  analysis.ipynb  calculate_metrics.py  commands.txt  evaluate.py  inference.py  inference_cpu.py  inference_outputs.py  inference_sync.py  model_parameters.py  model_training.py  model_utils.py  notepad  pyproject.toml  requirements.txt  utils.py
ajnovice/: Increment_Sequence.py  LinePlot.ipynb  explore_data_aflah.ipynb  orz_hf_upload_aflah.ipynb
alvin/: kyle_analysis.ipynb  memorization_eval_analysis.ipynb
common/: pipeline.py
datasets/: .gitignore
filters/: __init__.py  base.py  code_vs_nl.py  constants.py  detokenize.py  highly_duplicated_filter.py  highly_repetitive.py  highly_repetitive_tests.py  huffman_coding_filter.py  pattern.py  pattern_incrementing.py  semantic_duplicates_filter.py  seq_token_frequencies.py  similarity_filter.py  test_highly_duplicated_filter.py  test_highly_repetitive.py  test_pattern_incrementing.py  test_seq_token_frequencies.py  (+4 more)
working_dirs/orz/: .gitignore  CMakeLists.txt  Freq and Perplexity.ipynb  Remove Duplicates from Zero Offsets.ipynb  Sequence Duplicates EDA.ipynb  calculate_asymptotic_duplicates.py  calculate_duplicates.cpp  calculate_token_frequencies.cpp  classify_code_vs_nl.py  combine_duplicate_hashes.py  deduped_memorized_frequencies.json  load_pile.py  save_approx_hashcounts.cpp  save_sequence_hashes.py  save_true_counts.cpp  save_true_duplicate_counts.cpp  save_true_duplicates.py  save_zero_offset_duplicate_hashes.py  standard_memorized_frequencies.json  upload_entropies.py
working_dirs/orz/sequence_duplication/: CMakeLists.txt  save_true_duplicate_counts.cpp
working_dirs/orz/token_frequencies/: calculate_token_frequencies.cpp
(+67 files in other folders)
